apps/echo-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-service
  namespace: prod
spec:
  selector:
    app: echo-server
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5678
